# python-apps

./: .gitignore  .pylintrc  README.md  main.py  menu.py  pyproject.toml  requirements.txt  segment.py  sortLetters.py  triangle.py
.github/workflows/: linting.yml  super-linter.yml
airQuality/: app.py  config.json  config.py
airQuality/components/: selection.py
airQuality/utilities/: draw.py  generation.py
apps/console_apps[C]/: desc.txt
apps/console_apps[C]/anagram[P]/: anagram.py  desc.txt  main.py
apps/console_apps[C]/average[P]/: average.py  desc.txt  main.py
apps/console_apps[C]/elephants_oi[P]/: desc.txt  elephants.py
apps/console_apps[C]/line[P]/: desc.txt  line.py  main.py
apps/console_apps[C]/palindrome[P]/: desc.txt  main.py  palindrome.py
apps/console_apps[C]/segment[P]/: desc.txt  main.py  segment.py
apps/console_apps[C]/slonie_oi[P]/: desc.txt  elephants.py  main.py
apps/console_apps[C]/sortLetters[P]/: desc.txt  main.py  (+1 more)
apps/matura_tasks[C]/: desc.txt
apps/zadania_maturalne[C]/: desc.txt
explorer/: __init__.py  handler.py
explorer/submodules/: __init__.py  text.py
pyap_apps/tkinter_apps[C]/: desc.txt
python_apps/: __init__.py  __main__.py  menu.py
python_apps/explorer/: __init__.py  handler.py
zadania_maturalne/cezar/: Zadanie 6.2.py  data.py
zadania_maturalne/kryptogramy/: Polecenia.txt  Zadanie 1.py  Zadanie 2.py  Zadanie 3.py
zadania_maturalne/liczby/: Zadanie 4.1.py  Zadanie 4.2.py  Zadanie 4.3.py  data.py
zadania_maturalne/neon/: Zadanie 4.1.py  Zadanie 4.2.py  Zadanie 4.3.py  Zadanie 4.4.py  data.py
(+138 files in other folders)
