[tool.poetry]
name = "python-apps"
version = "0.1.0"
description = "Extensible console application for running categorized applications from a menu that is easy to customize and share"
authors = ["JakubKorytko <jakub.korytko@o2.pl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_apps", from = "." },
    { include = "pyap_apps", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11.4"
colored = "^2.2.3"
pillow = "^10.1.0"
requests = "^2.31.0"
pip = "^23.3.1"

[tool.poetry.scripts]
python-apps = "python_apps.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
